--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:usesCleartextTraffic="true"
         android:theme="@style/Theme.MovieApp"
         tools:targetApi="31">
+        <activity android:name=".activity.AuthenticationActivity"
+            android:screenOrientation="portrait"
+            android:exported="true"/>
         <activity android:name=".activity.AuthenticationOptionsActivity"
             android:windowSoftInputMode="adjustPan"
             android:screenOrientation="portrait"
@@ -26,7 +29,7 @@
             android:screenOrientation="portrait"
             android:exported="true"/>
         <activity
-            android:name=".activity.AuthenticationActivity"
+            android:name=".activity.OnBoardingActivity"
             android:screenOrientation="portrait"
             android:exported="true">
             <intent-filter>
